# RAG

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: books.py  chat.py  settings.py
app/models/: schemas.py
app/services/: book_catalog.py  book_title.py  indexing_jobs.py  lightrag_service.py  local_embeddings.py  page_filter.py  pdf_parser.py  router.py
app/web/: index.html
docs/: mvp_24h_plan.md  noograf_konkursnyy_plan.md  znanievod_konkursnyy_plan.md
docs/contest_presentation/: contest_presentation.js  contest_presentation.pptx  ~$contest_presentation.pptx
