[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-books-mvp"
version = "0.1.0"
description = "24h MVP for PDF books with LightRAG and a simple agentic router"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pymupdf>=1.24.0",
  "openai>=1.0.0"
]

[tool.setuptools]
packages = ["app", "app.api", "app.models", "app.services"]
